...

    public var id: String { rawValue }

    var title: String {
        switch self {
        case .today:   return "Today"
        case .diet:    return "Diet"
        case .water:   return "Water"
        case .journal: return "Journal"
        case .dateLog: return "Date Log"
        }
    }

...
